--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -1,12 +1,11 @@
 .body_bg {
-  background-color: #222D32;
+  background-color: #222d32;
 }
-
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
-
 * {
   margin: 0;
   padding: 0;
@@ -14,153 +13,113 @@ html, body {
 ul {
   list-style: none;
 }
-
 a:link,
 a:visited,
 a:hover,
 a:active {
   text-decoration: none;
 }
-
 .red {
-  color: #A94442;
+  color: #a94442;
 }
-
 .table.table-bordered th,
 .table.table-bordered td {
   text-align: center;
   vertical-align: middle;
 }
-
 .mt_150 {
   margin-top: 150px;
 }
 .mb_20 {
   margin-bottom: 20px;
 }
-
 .panel-title {
   height: 40px;
   line-height: 40px;
   font-size: 20px;
 }
-
-/* lt_aside 开始 */
-.lt_aside {
+.lt-left {
   width: 180px;
   height: 100%;
-  background-color: #222D32;
+  color: #fff;
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 999;
-  transition: all 1s;
+  z-index: 1;
+  transition: transform 0.5s linear;
 }
-.lt_aside.hidemenu {
-  left: -180px;
-}
-
-
-.lt_aside .brand {
+.lt-left .brand {
   height: 50px;
   line-height: 50px;
-  font-size: 24px;
-  background-color: #367FA9;
+  background-color: #367fa9;
   text-align: center;
+  font-size: 24px;
 }
-.lt_aside .brand a {
-  color: white;
-}
-
-.lt_aside .user {
+.lt-left .user {
   height: 180px;
+  text-align: center;
+  margin-top: 15px;
 }
-.lt_aside .user {
-  padding-top: 30px;
-}
-.lt_aside .user img {
+.lt-left .user img {
   width: 80px;
   height: 80px;
+  margin-bottom: 10px;
   border-radius: 50%;
-  display: block;
-  margin: 0 auto;
 }
-.lt_aside .user p {
-  height: 40px;
-  line-height: 40px;
+.lt-left .user span {
+  font-size: 16px;
+}
+.lt-left .lt-nav {
   text-align: center;
-  font-size: 18px;
-  color: white;
 }
-
-.lt_aside .nav a {
-  height: 40px;
-  line-height: 40px;
+.lt-left .lt-nav a {
   display: block;
   color: white;
-  padding-left: 40px;
-  border-left: 3px solid transparent;
+  padding: 10px 0;
 }
-.lt_aside .nav i {
+.lt-left .lt-nav a > span:first-child {
   margin-right: 5px;
 }
-.lt_aside .nav a.current {
-  background-color: #1D1F21;
-  border-left: 3px solid #006699;
+.lt-main {
+  padding-left: 180px;
+  position: relative;
+  transition: padding-left 0.5s linear;
 }
-.lt_aside .nav .child a {
-  padding-left: 60px;
-}
-
-/* lt_aside 结束  */
-
-
-
-/* lt_main 开始 */
-.lt_main {
-  height: 1000px;
+.lt-main .topbar {
+  height: 50px;
+  background-color: #367fa9;
+  position: fixed;
   width: 100%;
   padding-left: 180px;
-  padding-top: 50px;
-  transition: all 1s;
-}
-.lt_main.hidemenu {
-  padding-left: 0px;
-}
-
-.lt_topbar {
-  height: 50px;
-  width: 100%;
-  line-height: 50px;
-  background-color: #3C8DBC;
-  position: fixed;
+  transition: padding-left 0.5s linear;
   top: 0;
   right: 0;
-  padding-left: 180px;
-  transition: all 1s;
-  z-index: 666;
 }
-.lt_topbar.hidemenu {
-  padding-left: 0px;
-}
-
-.lt_topbar a {
+.lt-main .topbar a {
   width: 50px;
   height: 50px;
-  font-size: 16px;
-  color: white;
   text-align: center;
 }
-
-.breadcrumb {
-  margin-top: 20px;
+.lt-main .topbar a span {
+  color: white;
+  line-height: 50px;
+  font-size: 24px;
 }
-
-
-.echarts_1,
-.echarts_2 {
-  width: 48%;
-  height: 400px;
+.lt-main .main {
+  padding-top: 50px;
+  height: 1000px;
+  background-color: #ccc;
 }
-
-/* lt_main 结束 */
+.lt-main .main .breadcrumb {
+  padding: 5px 10px;
+  margin: 20px 10px;
+}
+.lt-left.hideLeft {
+  transform: translateX(-180px);
+}
+.lt-main.hideLeft {
+  padding-left: 0px;
+}
+.topbar.hideLeft {
+  padding-left: 0px;
+}
